--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.06.2024 14:39:47</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.07.2024 07:02:51</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
+<table class="table"><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květáková s vejcem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s játrovými knedlíčky</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené vepřové řízky z kotlety bez kosti, vídeňský bramborový salát, citrón</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Řecká Musaka s lilkem a mletým masem, salát coleslaw</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Filírovaná vepřová panenka, sýrové grusetky promíchané se sušenými rajčaty a smetanou, malý zeleninový salát</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zadělávané batátové noky ve smetanové omáčce s houbami, filírovaná kuřecí prsa</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová roláda plněná vejci a zeleninou, americké brambory</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">1/4</td><td class="menuName">Pomalu pečená kachna na kmíně, bramborové a kynuté houskové knedlíky maštěné cibulkou, dušené bílé a červené zelí</td><td class="menuPrice">179,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou s grilovanou zeleninou, hranolky, česnekový dip</td><td class="menuPrice">164,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené masové karbanátky, vařené nové brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený moravský vrabec, kynuté houskové knedlíky, bílé dušené zelí</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí nudličky po čínsku se zeleninou, hranolky</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Medailonky z vepřové panenky, jarní zelenina na másle, sýrové grusetky s rukolou</td><td class="menuPrice">184,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti gratinovaný šunkou a sýrem, opečené brambory</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Linguine "AGLIO OLIO" s filírovanou vepřovou panenkou, strouhaný parmazán</td><td class="menuPrice">173,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná kuřecím masem, ledovým salátem, rajčaty, sýrem a jalapeňos, hranolky, tatarka</td><td class="menuPrice">179,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažen sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5 L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr></tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5 L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"> Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
@@ -30,15 +30,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -48,9 +49,29 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 30.6.2024 </div>
+<div class="nadpis">Pondělí 1.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Hrachová polévka s uzeným masem 1</div>
+<div class="cena">40 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Kuřecí steak s brusinkovým přelivem, krokety 1</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>120g Zeleninové bulgureto s grilovanými kousky lososa s parmazánem a limetou 1, 4, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>120g Smažený hermelín, brambory, tatarka 1, 3, 7, 10</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -61,9 +82,9 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 30.6.2024 </div>
+<div class="nadpis">Pondělí 1.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -84,8 +105,73 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_22695">Pondělí 01. 07.</a>
 </div>
-<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
+</div>
+<table class="list js-bookmark-block" id="day_22695" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Staročeská bramboračka</span>
+<span class="allergen">(A: 1, 9, 12)</span>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Hovězí pečeně </span>
+<span class="allergen">(A: 1)</span>
+<p class="desc">provoněná slaninou s dušenou rýží
+
+</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí steak </span>
+<span class="allergen">(A: 1, 7, 9)</span>
+<p class="desc">na barevném pepři s grilovanou zeleninou    </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Francouzské brambory </span>
+<span class="allergen">(A: 3, 7, 12)</span>
+<p class="desc">zapečené s uzeným masem, cibulí, vejci a kyselou okurkou </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Variace listových salátů </span>
+<span class="allergen">(A: 7)</span>
+<p class="desc">s filírovanou panenkou, bylinkový dresink </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Telecí játra na grilu, </span>
+<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
+<p class="desc">hranolky a tatarská omáčka                                                     </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
@@ -108,7 +194,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <section id="CSAntal"></section><a href="#top">&#8635;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-None
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Hovězí vývar, maso, zelenina</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Hovězí guláš, houskové knedlíky</td><td>158 Kč</td></tr><tr><td>150g Smažená vepřová kotleta, bramborová kaše, okurka</td><td>149 Kč</td></tr><tr><td>150g Kuřecí žluté kari, jasmínová rýže</td><td>155 Kč</td></tr><tr><td>300g Zapečený květák s bramborami a sýrem</td><td>115 Kč</td></tr><tr><td><h3>Buffet samoobslužný na váhu -- INDIE</h3></td><td> </td></tr><tr><td>Cizrnová chana masala</td><td> </td></tr><tr><td>Houbové kari s hráškem a koriandrem</td><td> </td></tr><tr><td>Kokosový Dhál</td><td> </td></tr><tr><td>Mrkvové Byriami s jogurtem</td><td> </td></tr><tr><td>Kuřecí stehno Tandoori v jogurtu</td><td> </td></tr><tr><td>Basmati rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>domácí těstoviny připravované na objednávku 150g / 300g: Fusilli</td><td>145 Kč</td></tr><tr><td>Con aglio e pomodori al forno (s česnekem, pečenými rajčaty)</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
